{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 38,
  "lineage": "5e610ff2-1f83-6846-a522-09a9cdc3ee6e",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "1-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "1-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-07-07T08:48:47.252-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/skripsi-392008/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/skripsi-392008/global/networks/internal-network",
            "priority": 1000,
            "project": "skripsi-392008",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skripsi-392008/global/firewalls/allow-internal",
            "source_ranges": [
              "10.10.10.0/24",
              "10.10.20.0/24",
              "10.10.30.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-07-07T08:48:47.239-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/skripsi-392008/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/skripsi-392008/global/networks/internal-network",
            "priority": 1000,
            "project": "skripsi-392008",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skripsi-392008/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/skripsi-392008/global/networks/internal-network",
            "mtu": 0,
            "name": "internal-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "skripsi-392008",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skripsi-392008/global/networks/internal-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "ceph",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-07-07T08:48:48.532-07:00",
            "gateway_address": "10.10.20.1",
            "id": "projects/skripsi-392008/regions/us-east1/subnetworks/ceph",
            "ip_cidr_range": "10.10.20.0/24",
            "name": "ceph",
            "network": "https://www.googleapis.com/compute/v1/projects/skripsi-392008/global/networks/internal-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "skripsi-392008",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skripsi-392008/regions/us-east1/subnetworks/ceph",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "glusterfs",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-07-07T08:48:47.630-07:00",
            "gateway_address": "10.10.30.1",
            "id": "projects/skripsi-392008/regions/us-east1/subnetworks/glusterfs",
            "ip_cidr_range": "10.10.30.0/24",
            "name": "glusterfs",
            "network": "https://www.googleapis.com/compute/v1/projects/skripsi-392008/global/networks/internal-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "skripsi-392008",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skripsi-392008/regions/us-east1/subnetworks/glusterfs",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "openstack",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-07-07T08:48:48.543-07:00",
            "gateway_address": "10.10.10.1",
            "id": "projects/skripsi-392008/regions/us-east1/subnetworks/openstack",
            "ip_cidr_range": "10.10.10.0/24",
            "name": "openstack",
            "network": "https://www.googleapis.com/compute/v1/projects/skripsi-392008/global/networks/internal-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "skripsi-392008",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skripsi-392008/regions/us-east1/subnetworks/openstack",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.ceph-address",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "10.10.20.10",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-07-07T08:53:08.616-07:00",
            "id": "projects/skripsi-392008/regions/us-east1/addresses/ceph-node1",
            "name": "ceph-node1",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "skripsi-392008",
            "purpose": "GCE_ENDPOINT",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skripsi-392008/regions/us-east1/addresses/ceph-node1",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/skripsi-392008/regions/us-east1/subnetworks/ceph"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.ceph"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address": "10.10.20.20",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-07-07T08:53:08.623-07:00",
            "id": "projects/skripsi-392008/regions/us-east1/addresses/ceph-node2",
            "name": "ceph-node2",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "skripsi-392008",
            "purpose": "GCE_ENDPOINT",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skripsi-392008/regions/us-east1/addresses/ceph-node2",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/skripsi-392008/regions/us-east1/subnetworks/ceph"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.ceph"
          ]
        }
      ]
    },
    {
      "module": "module.glusterfs-address",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "10.10.30.10",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-07-07T08:53:08.631-07:00",
            "id": "projects/skripsi-392008/regions/us-east1/addresses/glusterfs-node1",
            "name": "glusterfs-node1",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "skripsi-392008",
            "purpose": "GCE_ENDPOINT",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skripsi-392008/regions/us-east1/addresses/glusterfs-node1",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/skripsi-392008/regions/us-east1/subnetworks/glusterfs"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.glusterfs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address": "10.10.30.20",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-07-07T08:53:08.642-07:00",
            "id": "projects/skripsi-392008/regions/us-east1/addresses/glusterfs-node2",
            "name": "glusterfs-node2",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "skripsi-392008",
            "purpose": "GCE_ENDPOINT",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skripsi-392008/regions/us-east1/addresses/glusterfs-node2",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/skripsi-392008/regions/us-east1/subnetworks/glusterfs"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.glusterfs"
          ]
        }
      ]
    },
    {
      "module": "module.openstack-address",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "10.10.10.10",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-07-07T08:53:08.627-07:00",
            "id": "projects/skripsi-392008/regions/us-east1/addresses/controller",
            "name": "controller",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "skripsi-392008",
            "purpose": "GCE_ENDPOINT",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skripsi-392008/regions/us-east1/addresses/controller",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/skripsi-392008/regions/us-east1/subnetworks/openstack"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.openstack"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address": "10.10.10.20",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-07-07T08:53:07.729-07:00",
            "id": "projects/skripsi-392008/regions/us-east1/addresses/openstack-compute1",
            "name": "openstack-compute1",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "skripsi-392008",
            "purpose": "GCE_ENDPOINT",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skripsi-392008/regions/us-east1/addresses/openstack-compute1",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/skripsi-392008/regions/us-east1/subnetworks/openstack"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.openstack"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "address": "10.10.10.30",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-07-07T08:53:08.623-07:00",
            "id": "projects/skripsi-392008/regions/us-east1/addresses/openstack-compute2",
            "name": "openstack-compute2",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "skripsi-392008",
            "purpose": "GCE_ENDPOINT",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skripsi-392008/regions/us-east1/addresses/openstack-compute2",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/skripsi-392008/regions/us-east1/subnetworks/openstack"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.openstack"
          ]
        }
      ]
    }
  ]
}